--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             cd aws-sdk-ios-samples
             git checkout uiTest
             cd S3TransferUtility-Sample/Swift/
-            echo ${awsconfiguration} | base64 --decode >> S3BackgroundTransferSampleSwift/awsconfiguration.json
+            echo ${awsconfiguration} | base64 --decode > S3BackgroundTransferSampleSwift/awsconfiguration.json
             cat S3BackgroundTransferSampleSwift/awsconfiguration.json
             pod install
             xcodebuild -workspace S3TransferUtilitySampleSwift.xcworkspace -scheme "S3TransferUtilitySampleSwiftUITests" -destination 'platform=iOS Simulator,name=iPhone 8 Plus,OS=11.2' test
