--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,9 @@
 #
 # Check https://circleci.com/docs/2.0/ios-migrating-from-1-2/ for more details
 #
-
 version: 2
 jobs:
-  build:
+  run_ui_test:
     # Specify the Xcode version to use
     macos:
       xcode: "9.2.0"
@@ -16,16 +15,119 @@ jobs:
           command: |
             git clone https://github.com/awslabs/aws-sdk-ios-samples.git
             cd aws-sdk-ios-samples
-            git checkout uiTest
             cd S3TransferUtility-Sample/Swift/
             echo ${awsconfiguration} | base64 --decode > S3BackgroundTransferSampleSwift/awsconfiguration.json
             cat S3BackgroundTransferSampleSwift/awsconfiguration.json
             pod install
             xcodebuild -workspace S3TransferUtilitySampleSwift.xcworkspace -scheme "S3TransferUtilitySampleSwiftUITests" -destination 'platform=iOS Simulator,name=iPhone 8 Plus,OS=11.2' test
 
+  release_carthage:
+    # Specify the Xcode version to use
+    macos:
+      xcode: "9.2.0"
+
+    steps:
+      - checkout
+      - run:
+          name: upgrade carthage
+          command: brew outdated carthage || brew upgrade carthage
+      - run:
+          name: install github-release
+          command: brew install github-release
+      - run:
+          name: Build Carthage
+          command: carthage build --no-skip-current
+
+      - run:
+          name: Create Carthage Archive
+          command: bash CreateCarthageArchive.sh
+
+      - run:
+          name: release the tag
+          command: |
+            tagdescription=$(sed -n '/## '${CIRCLE_TAG}'/,/## [0-9]*\.[0-9]*\.[0-9]/p'  CHANGELOG.md | sed '1d' | sed '$d')
+            tagname="AWS SDK for iOS "${CIRCLE_TAG}
+            github-release release -s ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME}  -t ${CIRCLE_TAG} -d "$tagdescription" -n "$tagname"
+      - run:
+          name: upload file to git release
+          command: github-release upload -s ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME}  -t ${CIRCLE_TAG} -f aws-sdk-ios-carthage.framework.zip -n aws-sdk-ios-carthage.framework.zip
+
+  release_cocoapods:
+    # Specify the Xcode version to use
+    macos:
+      xcode: "10.0.0"
+    steps:
+      - checkout
+      - run:
+          name: Release cocoapods
+          command : python3    cocoapods_release.py
+  release_appledoc:
+    # Specify the Xcode version to use
+    macos:
+      xcode: "9.2.0"
+    steps:
+      - checkout
+
+      - run:
+          name: Install appledoc
+          command: |
+            pwd
+            pushd $TMPDIR
+            git clone https://github.com/tomaz/appledoc
+            cd appledoc
+            bash install-appledoc.sh -t default
+            popd
+            pwd
+
+      - run:
+          name: generate documents
+          command: bash ./Scripts/GenerateAppleDocs.sh
+
+      - run:
+          name: copy documents
+          command: |
+            git config --local user.name "AWS"
+            git checkout  gh-pages
+            cp -R docs/html/*   docs/reference/
+
+      - run:
+          name: checkin documents
+          command: |
+            git add docs/reference
+            git commit -m "Update document via CircleCI"
+            git push -q https://${GITHUB_TOKEN}@github.com/aws/aws-sdk-ios.git
+
 workflows:
   version: 2
-
   build_and_test:
     jobs:
-      - build
+      - run_ui_test:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+.[0-9]+.[0-9]+$/
+      - release_carthage:
+          requires:
+            - run_ui_test
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+.[0-9]+.[0-9]+$/
+      - release_cocoapods:
+          requires:
+            - run_ui_test
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+.[0-9]+.[0-9]+$/
+      - release_appledoc:
+            requires:
+              - run_ui_test
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+.[0-9]+.[0-9]+$/
